--- a/evaluator/package.json
+++ b/evaluator/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.2",
+    "canvas-confetti": "^1.9.0",
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
     "@types/bootstrap": "^5.2.7",
+    "@types/canvas-confetti": "^1.6.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
